--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@mui/lab": "^6.0.0-beta.22",
     "@mui/material": "^6.3.1",
     "cra-template": "1.2.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "styled-components": "^6.1.13",
     "swiper": "^12.0.2"
   },
