--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "styled-components": "^6.1.13",
     "swiper": "^12.0.2"
   },
+  "homepage": "https://yourusername.github.io/your-repo-name",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
