packagee.json fix

--- a/package.json
+++ b/package.json
@@ -19,14 +19,11 @@
     "styled-components": "^6.1.13",
     "swiper": "^12.0.2"
   },
-  "homepage": "https://github.com/HadilMeddeb/my-portfilio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
